Adding maven exec plugin for easier executing of MV with maven
Former-commit-id: c31ef43abc40ca9a09fae9a543d913f6842694fd